[gd_scene load_steps=5 format=3 uid="uid://yf6vc0jnw4l0"]

[ext_resource type="Script" path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/AreYouSureDialog.gd" id="1"]
[ext_resource type="FontFile" uid="uid://drpsbtsxbxayu" path="res://fonts/Built/Ubuntu_B_72.tres" id="2"]
[ext_resource type="FontFile" path="res://fonts/Built/Ubuntu_M_48tred.tres" id="3"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.6, 0, 0.294118, 0.662745)

[node name="AreYouSureDialog" type="Popup"]
title = "Are you sure?"
initial_position = 2
size = Vector2i(1000, 500)
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.364706)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2")
text = "Are you sure?sdfffffffffffffffffffffffds"
clip_text = true

[node name="ButtonConfirmations" type="HBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Yes" type="Button" parent="Panel/VBoxContainer/ButtonConfirmations"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.0901961, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.494118, 0, 0, 1)
theme_override_fonts/font = ExtResource("3")
text = "YES"

[node name="Yes2" type="Button" parent="Panel/VBoxContainer/ButtonConfirmations"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.0901961, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.494118, 0, 0, 1)
theme_override_fonts/font = ExtResource("3")
text = "YES"

[node name="No" type="Button" parent="Panel/VBoxContainer/ButtonConfirmations"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("3")
text = "NO"

[connection signal="pressed" from="Panel/VBoxContainer/ButtonConfirmations/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonConfirmations/Yes2" to="." method="_on_yes_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonConfirmations/No" to="." method="_on_No_pressed"]
